# explore-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: draft.md
materials/: Ontologies_Theory_and_Applications-20240208.pptx  ver20240208 Jackie Csonka - Ontologies OIC.pptx
references/: refs.bib  refs.yaml  yourleanring.md
