[tool.poetry]
name = "explore-ai"
version = "0.1.0"
description = "learning about topics in AI/ML"
authors = ["Ali Hashmi <aa.imran@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-pptx = "^0.6.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
